2014-08-22  Gavin Smith  <gavinsmith0123@gmail.com>

	* info/texinfo.texi: Remove extra space in menu references to
	"@- @hyphenation" node.  Report from Vincent Belaïche.

	* info/info-stnd.texi (Searching Commands): Add reference to explain
	regular expressions.

2014-08-21  Gavin Smith  <gavinsmith0123@gmail.com>

	* info/session.c (info_parse_and_select): Initialize line_number field
	of reference.

2014-08-21  Gavin Smith  <gavinsmith0123@gmail.com>

	* doc/texinfo.texi (Appendix F Info Format Specification): Update
	including quoting mechanism, use of non-ASCII characters in node
	names, tag table being optional in non-split files, use of "(dir)" in
	node lines.  Mention possibility of formfeed characters in section
	separators.

2014-08-21  Gavin Smith  <gavinsmith0123@gmail.com>

	* info/display.c (decide_if_in_match): New function.
	(display_update_window_1): Call it.

	* info/display.c (find_diff): Return offset of first ESC in line if
	the lines differ and there is one.  Return -1 if no difference.
	Handle multicolumn characters with wcwidth.
	(display_node_text): Use offset into new line contents set by
	find_diff.

2014-08-21  Gavin Smith  <gavinsmith0123@gmail.com>

	* info/infomap.c (default_emacs_like_info_keys): Add ESC x key
	sequence for execute-command.

2014-08-21  Karl Berry  <karl@gnu.org>

	* Texinfo/Convert/Plaintext.pm (converter_initialize): propagate
	FILLCOLUMN.  Report from Mahlon Smith.

2014-08-20  Gavin Smith  <gavinsmith0123@gmail.com>

	* info/session.c (info_menu_item): Check for case when there are no
	menu entries in the node.

2014-08-20  Gavin Smith  <gavinsmith0123@gmail.com>

	* doc/info-stnd.texi (Searching Commands): Consistent formatting
	for commands without key bindings.  Mention alternative for searching
	backwards.  Remove reference to Emacs regular expressions, as those
	are slightly different.  Mention what happens if you don't give a
	string for 'i'.  Mention 'highlight-searches' variable.