@@ -1,5 +1,13 @@
 2014-08-22  Gavin Smith  <gavinsmith0123@gmail.com>
 
+	* info/session.c (info_read_and_dispatch): Consider ESC <key> to be
+	the same as Meta-<key>.
+	* info/infomap.c (default_emacs_like_info_keys)
+	(default_vi_like_info_keys): Refer to key sequences starting ESC with
+	KEYMAP_META instead.
+
+2014-08-22  Gavin Smith  <gavinsmith0123@gmail.com>
+
 	* info/texinfo.texi: Remove extra space in menu references to
 	"@- @hyphenation" node.  Report from Vincent Belaïche.
 
